--- a/W2/D3/index.html
+++ b/W2/D3/index.html
@@ -62,6 +62,9 @@
     <footer class="footer">
         <p>&copy; 2025 TravelScape | Diseñado por Víctor Hernández </p>
     </footer>
+    <audio src="https://cdn.freesound.org/previews/727/727514_1648170-lq.ogg" autoplay>
+        Tu navegador no soporta el elemento de <code>audio</code>.
+    </audio>
 </body>
 
 </html>
