added audio to lugares and delete it from index

--- a/W2/D3/index.html
+++ b/W2/D3/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <title>TravelScape</title>
 </head>
 
@@ -23,7 +24,8 @@
     <main>
         <section id="inicio" class="hero">
             <h1>TravelScape</h1>
-            <h2>Tu Guía de Viajes y Aventuras</h2>
+            <h2>Tu Guía de Viajes y Aventuras <i class="fa fa-search"></i>
+            </h2>
             <button><a href="pages/lugares.html">Ver más</a></button>
         </section>
 
@@ -62,9 +64,6 @@
     <footer class="footer">
         <p>&copy; 2025 TravelScape | Diseñado por Víctor Hernández </p>
     </footer>
-    <audio src="https://cdn.freesound.org/previews/727/727514_1648170-lq.ogg" autoplay>
-        Tu navegador no soporta el elemento de <code>audio</code>.
-    </audio>
 </body>
 
 </html>
