--- a/W2/D3/pages/lugares.html
+++ b/W2/D3/pages/lugares.html
@@ -89,6 +89,8 @@
     <footer class="footer">
         <p>&copy; 2025 TravelScape | Diseñado por Víctor Hernández </p>
     </footer>
+    <audio src="https://cdn.freesound.org/previews/727/727514_1648170-lq.ogg" autoplay>
+        Tu navegador no soporta el elemento de <code>audio</code>.
+    </audio>
 </body>
-
 </html>
