added fa-arrow-right to ver mas

--- a/W2/D3/index.html
+++ b/W2/D3/index.html
@@ -24,9 +24,9 @@
     <main>
         <section id="inicio" class="hero">
             <h1>TravelScape</h1>
-            <h2>Tu Guía de Viajes y Aventuras <i class="fa fa-search"></i>
+            <h2>Tu Guía de Viajes y Aventuras
             </h2>
-            <button><a href="pages/lugares.html">Ver más</a></button>
+            <button><a href="pages/lugares.html">Ver más <i class="fa fa-arrow-right"></i></a></button>
         </section>
 
         <section class="section">
