--- a/W2/D4/index.html
+++ b/W2/D4/index.html
@@ -4,63 +4,64 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>IronSkydive</title>
+    <link rel="stylesheet" href="style.css">
+    <title>Iron Skydive</title>
 </head>
 
 <body>
-    <nav>
+    <nav class="nav-bar">
         <ul>
             <li><a href="#structure">Day Structure</a></li>
             <li><a href="#team">Team</a></li>
             <li><a href="#schedule">Schedule</a></li>
         </ul>
     </nav>
-    <header>
+    <header class="header">
         <h1><img src="https://s3-eu-west-1.amazonaws.com/ih-materials/uploads/ironhack-skydive-logo.png" alt="IronSkydive Logo">IronSkydive</h1>
         <h2>Let the trip begin</h2>
-        <aside>
+        <aside class="quote">
             <i>"The best experience of our lives"</i>
             <p>Ariel Quiñones & Gonzalo Manrique, Ironhack Founders</p>
         </aside>
     </header>
     <!-- SECTION 1 -->
-    <section>
+    <section id="general-information" class="dark-background">
         <article>
             <h3>Hello!</h3>
-            <p>Welcome to IronSkydive, the best adventure you will ever have.</p>
-            <a href="#">Learn More</a>
+            <p class="text">Welcome to IronSkydive, the best adventure you will ever have.</p>
+            <a href="#" class="link-btn">Learn More</a>
         </article>
         <article>
             <h3>About us</h3>
-            <p>We like a lot programming website, but we also love to practice sport.</p>
-            <a href="#">Watch Video</a>
+            <p class="text">We like a lot programming website, but we also love to practice sport.</p>
+            <a href="#" class="link-btn">Watch Video</a>
         </article>
         <article>
             <h3>Wanna join?</h3>
-            <p>Join our fitness program to be in good shape while learning.</p>
-            <a href="#">Register</a>
+            <p class="text">Join our fitness program to be in good shape while learning.</p>
+            <a href="#" class="link-btn">Register</a>
         </article>
     </section>
     <!-- SECTION 2 -->
-    <section>
+    <section id="structure">
         <h3>How do we structure the day?</h3>
         <div>
-            <article>
+            <article class="service-box">
                 <img src="https://s3-eu-west-1.amazonaws.com/ih-materials/uploads/ironskydive-training.png" alt="Iron Skydive Training">
                 <h4>1. Training</h4>
                 <p>We teach all the necessary things to jump from the plane without any kind of problem.</p>
             </article>
-            <article>
+            <article class="service-box">
                 <img src="https://s3-eu-west-1.amazonaws.com/ih-materials/uploads/ironskydive-get-ready.png" alt="Iron Skydive Get Ready">
                 <h4>2. Get Ready</h4>
                 <p>You are already prepared, you just need the suit and a parachute. All sizes available.</p>
             </article>
-            <article>
+            <article class="service-box">
                 <img src="https://s3-eu-west-1.amazonaws.com/ih-materials/uploads/ironskydive-fly.png" alt="Iron Skydive Fly">
                 <h4>3. Fly</h4>
                 <p>Your are ready, and the plane is waiting for us in the hangar. Let's fly!</p>
             </article>
-            <article>
+            <article class="service-box">
                 <img src="https://s3-eu-west-1.amazonaws.com/ih-materials/uploads/ironskydive-jump.png" alt="Iron Skydive Jump">
                 <h4>4. Jump!</h4>
                 <p>You have done the most complicated. Just one step left... jump!</p>
@@ -68,27 +69,27 @@
         </div>
     </section>
     <!-- SECTION 3 -->
-    <section>
+    <section id="team" class="dark-background">
         <h3>Team</h3>
-        <p>Our team collectively has 75 years of experience. Odds are, when you jump out of the plane with these professionals, you won't go splat.</p>
+        <p class="section-text">Our team collectively has 75 years of experience. Odds are, when you jump out of the plane with these professionals, you won't go splat.</p>
         <hr>
         <div>
             <article>
-                <h4>Harold Rothstein</h4>
+                <h4 class="member-name">Harold Rothstein</h4>
                 <img src="https://s3-eu-west-1.amazonaws.com/ih-materials/uploads/upload_c18b1c463b80090894237a262dfdfbad.jpg" alt="Harold Rothstein image">
             </article>
             <article>
-                <h4>Susan Phillips</h4>
+                <h4 class="member-name">Susan Phillips</h4>
                 <img src="https://s3-eu-west-1.amazonaws.com/ih-materials/uploads/upload_a18d6123a7c8e75f7e70a4e59b941093.jpg" alt="Susan Phillips image">
             </article>
             <article>
-                <h4>Taylor Roberts</h4>
+                <h4 class="member-name">Taylor Roberts</h4>
                 <img src="https://s3-eu-west-1.amazonaws.com/ih-materials/uploads/upload_7104a331530d1b0611da55093b7dc421.jpg" alt="Taylor Roberts image">
             </article>
         </div>
     </section>
     <!-- SECTION 4 -->
-    <section>
+    <section id="schedule">
         <h3>Schedule</h3>
         <table>
             <thead>
@@ -134,10 +135,10 @@
         </table>
         <h3>Schedule a Time Slot</h3>
     </section>
-    <footer>
+    <footer class="dark-background footer">
         <section>
             <h5>Contact Information</h5>
-            <address>IronSkydive<br>33 Rue la Fayette,<br>75009 Paris,<br>France<br>+33 (0) 619 193 088</address>
+            <address class="address">IronSkydive<br>33 Rue la Fayette,<br>75009 Paris,<br>France<br>+33 (0) 619 193 088</address>
             <h5>Follow Us</h5>
             <ul>
                 <li><a href="" target="_blank">Twitter</a></li>
