--- a/W4/D2/tienda-opciones-pedido/index.html
+++ b/W4/D2/tienda-opciones-pedido/index.html
@@ -45,7 +45,7 @@
                 <div>
                     <label>Ingredientes Extra:</label>
                     <div class="checkbox-group">
-                        <input type="checkbox" name="ingredientes-extra[]" value="salmon-ahumado" />Salmón
+                        <label class="option-label"><input type="checkbox" name="ingredientes-extra[]" value="salmon-ahumado" />Salmón
                             ahumado</label>
                         <label class="option-label"><input type="checkbox" name="ingredientes-extra[]" value="gambas" />Gambas</label>
                         <label class="option-label"><input type="checkbox" name="ingredientes-extra[]" value="pulpo" />Pulpo</label>
